apex-trigger-handler/main/default/objects/TriggerHandlerSettings__c/TriggerHandlerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Trigger Handler Settings</label>
</CustomObject>