apex-trigger-handler/main/default/objects/TriggerHandlerSettings__c/fields/ApexHasPriority__c.field-meta.xml
<CustomField>
    <fullName>ApexHasPriority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apex Has Priority</label>
    <type>Checkbox</type>
</CustomField>