apex-trigger-handler/main/default/objects/TriggerHandlerSettings__c/fields/BypassRegistry__c.field-meta.xml
<CustomField>
    <fullName>BypassRegistry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Registry</label>
    <type>Checkbox</type>
</CustomField>