apex-trigger-handler/main/default/objects/TriggerHandlerSettings__c/fields/BypassSObjects__c.field-meta.xml
<CustomField>
    <fullName>BypassSObjects__c</fullName>
    <label>Bypass SObjects</label>
    <type>TextArea</type>
</CustomField>