apex-trigger-handler/main/default/objects/TriggerHandlerSettings__c/fields/BypassTriggers__c.field-meta.xml
<CustomField>
    <fullName>BypassTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Triggers</label>
    <type>Checkbox</type>
</CustomField>