apex-trigger-handler/main/default/objects/TriggerHandlerSettings__c/fields/RegistryHasPriority__c.field-meta.xml
<CustomField>
    <fullName>RegistryHasPriority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registry Has Priority</label>
    <type>Checkbox</type>
</CustomField>