apex-trigger-handler/main/default/objects/TriggerHandlerSettings__c/listViews/All_Settings.listView-meta.xml
<ListView>
    <fullName>All_Settings</fullName>
    <columns>SETUP_TYPE</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>BypassTriggers__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Settings</label>
</ListView>